# LIFT

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: description_de.tex  references.bib  tab_params.tex
example/from_comparison_obj/: run_scenario_from_comparison_obj.ipynb
example/from_csv/: run_scenarios_from_csv.ipynb
example/paper/: A_data_time.csv  A_data_total.csv  B_data_time.csv  B_data_total.csv  C_data_time.csv  C_data_total.csv  case_b.csv  case_c.csv  paper_example.ipynb  results.tex
lift/: __main__.py  backend.py  definitions.py  energy_system.py  frontend.py  interfaces.py  main.py  simulation.py  subfleets.py  utils.py
lift/.streamlit/: colors.toml  config.toml
lift/backend/: backend.py  comparison.py  energy_system.py  interfaces.py  scenario.py  utils.py
lift/backend/comparison/: __init__.py  backend.py  comparison.py  interfaces.py
lift/backend/economics/: economics_phase.py  interfaces.py
lift/backend/evaluation/: __init__.py  blocks.py  economics_phase.py  evaluation.py  interfaces.py  transpose_csv.py
lift/backend/phase_economics/: economics_phase.py  interfaces.py
lift/backend/phase_simulation/: blocks.py  interfaces.py  simulation.py
lift/backend/simulation/: __init__.py  blocks.py  interfaces.py  simulation.py
lift/data/: chargers.json  cis.json  ess.json  fleet.json  generate_mobility.ipynb  grid.json  log_hlt.csv  log_hst.csv  log_ust.csv  log_usv.csv  pv.json  scn.json  subfleets.json
lift/data/def_mobility/: mtf.py  usecases_hlt.csv  usecases_hst.csv  usecases_usv.csv
lift/data/languages/: de.json  en.json  options.json
lift/data/mobility/: generate_mobility.ipynb
lift/data/mobility/def_mobility/: usecases_ust.csv
lift/definitions/: __init__.py  chargers.py  definitions.py  economics.py  energy_system.py  subfleets.py  times.py
lift/frontend/: app.py  definitions.py  design.py  export.py  frontend.py  interfaces.py  plots.py  results.py  sidebar.py  utils.py
lift/scientific/: run.py
lift/scripts/: run.py
scripts/: A_data_total.csv  results.tex  run.py  run_lift.ipynb
scripts/example/from_comparison_obj/: run_scenario_from_comparison_obj.ipynb
scripts/example/from_csv/: definition.csv  run_scenarios_from_csv.ipynb
scripts/example/paper/: B_data_time.csv  B_data_total.csv  C_data_time.csv  C_data_total.csv  case_a.csv  paper_example.ipynb
