[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lift"
version = "0.9.0a4"
description = "LIFT - Logistics Infrastructure & Fleet Transformation"
authors = [
    { name = "Anna Paper", email = "anna.paper@tum.de" },
    { name = "Brian Dietermann", email = "brian.dietermann@tum.de"},
    { name = "Fabian Mayer", email = "fabian.mayer@tum.de" },
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair",
    "demandlib",
    "folium",
    "numpy",
    "matplotlib",
    "pandas",
    "pvlib>=0.13.0",
    "streamlit",
    "streamlit_folium",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lift*"]

[tool.setuptools.package-data]
lift = ["data/*", ".streamlit/*"]

[project.scripts]
lift = "lift.__main__:main"
