[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lift"
version = "0.9.0a4"
description = "LIFT - Logistics Infrastructure & Fleet Transformation"
authors = [
    { name = "Brian Dietermann", email = "brian.dietermann@tum.de"},
    { name = "Anna Paper", email = "anna.paper@tum.de" },
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair",
    "demandlib",
    "folium",
    "numpy",
    "matplotlib",
    "pandas",
    "pvlib>=0.13.0",
    "streamlit",
    "streamlit_folium",
]

[dependency-groups]
# [project.optional-dependencies]
dev = ["pre-commit", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Enable import sorting.
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files.
"__init__.py" = ["E402", "F401"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lift*"]

[tool.setuptools.package-data]
lift = ["data/*", ".streamlit/*"]

[project.scripts]
lift = "lift.__main__:main"
