[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lift"
version = "1.0.0"
description = "LIFT - Logistics Infrastructure & Fleet Transformation"
authors = [
    { name = "Brian Dietermann", email = "brian.dietermann@tum.de"},
    { name = "Anna Paper", email = "anna.paper@tum.de" },
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair",
    "altair-saver",
    "demandlib",
    "folium",
    "numpy",
    "matplotlib",
    "pandas",
    "pvlib>=0.13.0",
    "python-docx",
    "pytz",
    "streamlit>=1.52.0",
    "streamlit_folium",
    "oemof-solph",
    "vl-convert-python",
]

[dependency-groups]
dev = ["pre-commit", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Enable import sorting.
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files.
"__init__.py" = ["E402", "F401"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lift*"]

[tool.setuptools.package-data]
lift = ["data/**/*", ".streamlit/**/*"]

[project.scripts]
lift = "lift.__main__:main"
